feat(user): add basic user layers and responses
